CHANGELOG
=========
  2004-07-14
  ==========
    * irssi -> xchat

  2004-06-10
  ==========
    * Er, fixed that $VAR -> %VAR again

  2004-06-07
  ==========
    * NEW ABSTRACT: %VAR{fears}
    * The bot will now cower in fear if it is told "Luigi30"
    * Fixed a $VAR -> %VAR
    * VERSION is now more detailed, with a date.

  2004-05-28
  ==========
    * Bots will just say no to suicide!

  2004-05-26
  ==========
    * As requested by Trust, you can now say "piss in foo".

  2004-05-25
  ==========
    * Piss on [foo] now works.
    * People can't say "piss on himself" etc

  2004-04-28
    * "Fixed" dildos (not very well, but they work)
    * Made the bot respond with an item from the "nos" abstracts
      when told to courtmartial self
    * _REALLY_ changed bmhelp -> imphelp

  2004-04-27
  ==========
    * Added Waitrose to supermarket list

  2004-04-25
  ==========
    * Got CIA working?
    * Changed all instances of bmhelp to imphelp :P
    * CIA test two...
    * HmmTest(tm)
    * 500th time lucky?
    * WOO TEST AGAIN

  2004-04-03
  ==========
    * Converted everything to UNIX format.
    * Oh yay. "2003-03-2X".

  2003-03-25
  ==========
    * Decided that IN MY PANTS will start at version 0.1.0 - changed
      VERSIONS to 0.1.0 svn.

  2003-03-24
  ==========
    * modules/leet.tcl - the -> teh

  2004-03-19
  ==========
    * Don't Do Drugs, mmkay

  2004-03-18
  ==========
    * Finished changing bMotion to IMP where relevent
    * Fixed the bug mentioned here: http://tinyurl.com/2wtwn
    * Added plugins/en/simple_sing.tcl
    * Moved public version announcement from modules/events.tcl to
      plugins/en/complex_questions.tcl, to prevent double output
    * Added handling for "do you have" questions.
    * Attempting to add CIA support :S
    * Testing CIA support...


  2004-03-11
  ==========
    * Initial fork from bMotion CVS.