@@ -3,6 +3,7 @@ CHANGELOG
   2004-07-14
   ==========
     * irssi -> xchat
+    * Removed <notopic></notopic>
 
   2004-06-10
   ==========
